Add persistent external data storage